<resources>
    <string name="app_name">Calculator</string>
    <string name="switcher">Mode</string>
    <string name="clear_btn">Clear</string>
    <string name="backspace_btn">Back</string>

    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="comma">.</string>
    <string name="parentheses">( )</string>

    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">X</string>
    <string name="division">÷</string>
    <string name="result">=</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>

</resources>
